# Zobbo

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  fly.toml
backend/: Cargo.toml  go.mod  main.go
backend/src/: main.rs
frontend/: app.js  bun.lockb  index.html  main.js  store.js
frontend/components/: App.js  GamePage.js  GameView.js  JoinRoomPage.js  JoinView.js  LandingPage.js  LandingView.js  LobbyPage.js  LobbyView.js
frontend/src/: App.tsx
game/backend/: Cargo.toml  askama.toml
game/backend/src/: config.rs  main.rs
game/backend/src/game/: engine.rs
game/backend/src/http/: auth.rs  mod.rs  routes.rs
game/backend/src/logic/: mod.rs  types.rs
game/backend/src/persistence/: memory.rs  mod.rs
game/backend/src/room/: manager.rs  mod.rs  room.rs
game/backend/src/telemetry/: mod.rs
game/backend/src/util/: id.rs  time.rs
game/backend/src/ws/: connection.rs  mod.rs  protocol.rs
game/frontend/: htmx.json
game/frontend/static/css/: styles.css
game/frontend/static/js/: app.js
game/frontend/templates/: base.html  lobby.html  room.html
game/frontend/templates/partials/: hand.html  opponent.html  room_state.html  table.html
game/shared/: README.md
