[package]
name = "zobbo-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros", "json"] }
hyper = { version = "1" }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
dashmap = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
time = "0.3"
parking_lot = "0.12"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
once_cell = "1"
futures = "0.3"
hex = "0.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
