[package]
name = "zobbo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "fs", "compression-full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
thiserror = "1"
dashmap = "5"
ulid = "1"
rand = "0.8"
askama = "0.12"
askama_axum = "0.4"
tokio-util = "0.7"

[package.metadata.askama]
dirs = ["../frontend/templates"]
